syntax = "proto3";

package xatu.eth.v2;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/eth/v2";

import "google/protobuf/descriptor.proto";
import "pkg/proto/eth/v1/beacon_block.proto";
import "pkg/proto/eth/v2/beacon_block.proto";

message EventBlock {
  oneof message {
    v1.BeaconBlock phase0_block = 1 [ json_name = "message" ];

    v2.BeaconBlockAltair altair_block = 2 [ json_name = "message" ];

    v2.BeaconBlockBellatrix bellatrix_block = 3 [ json_name = "message" ];

    v2.BeaconBlockCapella capella_block = 4 [ json_name = "message" ];
  }

  string signature = 5;
}
